Add SDP max. and other constraints

--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -657,32 +657,52 @@
     "    \n",
     "    dm_tilde_copy0 = dm_tilde\n",
     "    dm_tilde_copy1 = dm_tilde\n",
+    "    dm_tilde_copy01 = dm_tilde\n",
     "\n",
     "    # Solve SDP with conditions C0\n",
-    "    constraints = constraints_C0(ep, coef, dm_tilde_copy0, measurement_dataset, N, M, K, P)\n",
-    "    H_exp = 0\n",
+    "    constraints0 = constraints_C0(ep, coef, dm_tilde_copy0, measurement_dataset, N, M, K, P)\n",
+    "    H_exp0 = 0\n",
     "    for i in range(K):\n",
-    "        H_exp = H_exp + H @ dm_tilde_copy0[i]\n",
+    "        H_exp0 = H_exp0 + H @ dm_tilde_copy0[i]\n",
     "    prob_C0 = cp.Problem(\n",
     "        cp.Minimize(\n",
     "            cp.real(\n",
     "                cp.trace(\n",
-    "                    H_exp\n",
+    "                    H_exp0\n",
     "                )\n",
     "            )\n",
-    "        ), constraints\n",
+    "        ), constraints0\n",
     "    )\n",
     "    energy_C0 = prob_C0.solve(solver=cp.SCS, verbose=False)\n",
     "    if prob_C0.status != cp.OPTIMAL:\n",
     "        energy_C0 = float('inf') \n",
     "\n",
+    "    \n",
+    "    # Solve SDP with conditions C1\n",
+    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde_copy1, dm_tilde_C1, measurement_dataset, N, M, G)\n",
+    "    H_exp1 = 0\n",
+    "    for i in range(K):\n",
+    "        H_exp1 = H_exp1 + H @ dm_tilde_copy1[i]\n",
+    "    prob_C1 = cp.Problem(\n",
+    "        cp.Minimize(\n",
+    "            cp.real(\n",
+    "                cp.trace(\n",
+    "                    H_exp1\n",
+    "                )\n",
+    "            )\n",
+    "        ), constraints1\n",
+    "    )\n",
+    "    energy_C1 = prob_C1.solve(solver=cp.SCS, verbose=False)\n",
+    "    if prob_C1.status != cp.OPTIMAL:\n",
+    "        energy_C1 = float('inf')\n",
+    "\n",
     "\n",
     "    # Solve SDP with conditions C1+C0\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde_copy1, measurement_dataset, N, M, K, P)\n",
-    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde_copy1, dm_tilde_C1, measurement_dataset, N, M, G)\n",
+    "    constraints_0 = constraints_C0(ep, coef, dm_tilde_copy01, measurement_dataset, N, M, K, P)\n",
+    "    constraints_1 = constraints_C1(ep_C1, coef, dm_tilde_copy01, dm_tilde_C1, measurement_dataset, N, M, G)\n",
     "    H_exp01 = 0\n",
     "    for i in range(K):\n",
-    "        H_exp01 = H_exp01 + H @ dm_tilde_copy1[i]\n",
+    "        H_exp01 = H_exp01 + H @ dm_tilde_copy01[i]\n",
     "    prob_C01 = cp.Problem(\n",
     "        cp.Minimize(\n",
     "            cp.real(\n",
@@ -690,45 +710,65 @@
     "                    H_exp01\n",
     "                )\n",
     "            )\n",
-    "        ), constraints0 + constraints1\n",
+    "        ), constraints_0 + constraints_1\n",
     "    )\n",
     "    energy_C01 = prob_C01.solve(solver=cp.SCS, verbose=False)\n",
     "    if prob_C01.status != cp.OPTIMAL:\n",
     "        energy_C01 = float('inf') \n",
     "\n",
-    "    return energy_C0, energy_C01\n",
+    "    return energy_C0, energy_C1, energy_C01\n",
     "def SDP_solver_max(coef, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P):\n",
     "    '''Solve the SDP maximization problem with constraints C0 and C0+C1\n",
     "    '''\n",
-    "\n",
+    "    \n",
     "    dm_tilde_copy0 = dm_tilde\n",
     "    dm_tilde_copy1 = dm_tilde\n",
+    "    dm_tilde_copy01 = dm_tilde\n",
     "\n",
     "    # Solve SDP with conditions C0\n",
-    "    constraints = constraints_C0(ep, coef, dm_tilde_copy0, measurement_dataset, N, M, K, P)\n",
-    "    H_exp = 0\n",
+    "    constraints0 = constraints_C0(ep, coef, dm_tilde_copy0, measurement_dataset, N, M, K, P)\n",
+    "    H_exp0 = 0\n",
     "    for i in range(K):\n",
-    "        H_exp = H_exp + H @ dm_tilde_copy0[i]\n",
+    "        H_exp0 = H_exp0 + H @ dm_tilde_copy0[i]\n",
     "    prob_C0 = cp.Problem(\n",
     "        cp.Maximize(\n",
     "            cp.real(\n",
     "                cp.trace(\n",
-    "                    H_exp\n",
+    "                    H_exp0\n",
     "                )\n",
     "            )\n",
-    "        ), constraints\n",
+    "        ), constraints0\n",
     "    )\n",
     "    energy_C0 = prob_C0.solve(solver=cp.SCS, verbose=False)\n",
     "    if prob_C0.status != cp.OPTIMAL:\n",
     "        energy_C0 = float('inf') \n",
     "\n",
+    "    \n",
+    "    # Solve SDP with conditions C1\n",
+    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde_copy1, dm_tilde_C1, measurement_dataset, N, M, G)\n",
+    "    H_exp1 = 0\n",
+    "    for i in range(K):\n",
+    "        H_exp1 = H_exp1 + H @ dm_tilde_copy1[i]\n",
+    "    prob_C1 = cp.Problem(\n",
+    "        cp.Maximize(\n",
+    "            cp.real(\n",
+    "                cp.trace(\n",
+    "                    H_exp1\n",
+    "                )\n",
+    "            )\n",
+    "        ), constraints1\n",
+    "    )\n",
+    "    energy_C1 = prob_C1.solve(solver=cp.SCS, verbose=False)\n",
+    "    if prob_C1.status != cp.OPTIMAL:\n",
+    "        energy_C1 = float('inf')\n",
+    "\n",
     "\n",
     "    # Solve SDP with conditions C1+C0\n",
-    "    constraints0 = constraints_C0(ep, coef, dm_tilde_copy1, measurement_dataset, N, M, K, P)\n",
-    "    constraints1 = constraints_C1(ep_C1, coef, dm_tilde_copy1, dm_tilde_C1, measurement_dataset, N, M, G)\n",
+    "    constraints_0 = constraints_C0(ep, coef, dm_tilde_copy01, measurement_dataset, N, M, K, P)\n",
+    "    constraints_1 = constraints_C1(ep_C1, coef, dm_tilde_copy01, dm_tilde_C1, measurement_dataset, N, M, G)\n",
     "    H_exp01 = 0\n",
     "    for i in range(K):\n",
-    "        H_exp01 = H_exp01 + H @ dm_tilde_copy1[i]\n",
+    "        H_exp01 = H_exp01 + H @ dm_tilde_copy01[i]\n",
     "    prob_C01 = cp.Problem(\n",
     "        cp.Maximize(\n",
     "            cp.real(\n",
@@ -736,13 +776,13 @@
     "                    H_exp01\n",
     "                )\n",
     "            )\n",
-    "        ), constraints0 + constraints1\n",
+    "        ), constraints_0 + constraints_1\n",
     "    )\n",
     "    energy_C01 = prob_C01.solve(solver=cp.SCS, verbose=False)\n",
     "    if prob_C01.status != cp.OPTIMAL:\n",
     "        energy_C01 = float('inf') \n",
     "\n",
-    "    return energy_C0, energy_C01\n",
+    "    return energy_C0, energy_C1, energy_C01\n",
     "def biSection_search_min(higher_bound, threshold, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P):\n",
     "    '''Use bi-search method to find the minimum value of the relaxation such that there exists at least one solution in the search space,\n",
     "       with an accuracy of 'threshold'\n",
@@ -752,15 +792,15 @@
     "    high = higher_bound\n",
     "    max_iter = 6\n",
     "   \n",
-    "    energy_C0, energy_C01 = SDP_solver_min(high, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
+    "    energy_C0, energy_C1, energy_C01 = SDP_solver_min(high, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
     "    coef = high\n",
     "    \n",
     "    # If no solution exists within the initial higher bounds, increase the higher bound.\n",
-    "    while (math.isinf(energy_C0) or math.isinf(energy_C01)) and max_iter > 0:\n",
+    "    while (math.isinf(energy_C0) or math.isinf(energy_C1) or math.isinf(energy_C01)) and max_iter > 0:\n",
     "        low = high\n",
     "        high = 2*high\n",
     "        max_iter = max_iter-1\n",
-    "        energy_C0, energy_C01 = SDP_solver_min(high, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
+    "        energy_C0, energy_C1, energy_C01 = SDP_solver_min(high, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
     "\n",
     "    # If still no solution after expanding the bounds, return an error message.\n",
     "    if max_iter == 0:\n",
@@ -769,12 +809,13 @@
     "    # Perform the binary search within the updated bounds.\n",
     "    while abs(high - low) >= threshold:\n",
     "        coef = low + abs(high - low) / 2\n",
-    "        energy_C0_result, energy_C01_result = SDP_solver_min(coef, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
-    "        if (math.isinf(energy_C0_result) or math.isinf(energy_C01_result)):\n",
+    "        energy_C0_result, energy_C1_result, energy_C01_result = SDP_solver_min(coef, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P)\n",
+    "        if (math.isinf(energy_C0_result) or math.isinf(energy_C1) or math.isinf(energy_C01_result)):\n",
     "            low = coef\n",
     "        else:\n",
     "            high = coef\n",
     "            energy_C0 = energy_C0_result\n",
+    "            energy_C1 = energy_C1_result\n",
     "            energy_C01 = energy_C01_result\n",
     "\n",
     "    # # Perform the binary search within the updated bounds.\n",
@@ -786,7 +827,7 @@
     "    #     else:\n",
     "    #         high = coef\n",
     "\n",
-    "    return energy_C0, energy_C01, coef\n",
+    "    return energy_C0, energy_C1, energy_C01, coef\n",
     "def biSection_search_max(higher_bound, threshold, ep, ep_C1, dm_tilde, dm_tilde_C1, H, measurement_dataset, N, M, K, P):\n",
     "    '''Use bi-search method to find the minimum value of the relaxation such that there exists at least one solution in the search space,\n",
     "       with an accuracy of 'threshold'\n",
@@ -866,8 +907,13 @@
     "    E_max = []\n",
     "\n",
     "    E_min_C0 = []\n",
+    "    E_min_C1 = []\n",
     "    E_min_C01 = []\n",
     "    coef_min = []\n",
+    "\n",
+    "    E_max_C0 = []\n",
+    "    E_max_C1 = []\n",
+    "    E_max_C01 = []\n",
     "\n",
     "    for N_meas in N_meas_list:\n",
     "        path = f'meas_dataset/N={N}/N{N}_Meas{N_meas}.npy'\n",
@@ -882,14 +928,21 @@
     "        dm_tilde_C1 = SDP_variables_C1(ep_C1, measurement_dataset, N, G)\n",
     "\n",
     "        # Energy with SDP - minimum\n",
-    "        E_min_C0_value, E_min_C01_value, coef_min_value = biSection_search_min(higher_bound, threshold, \n",
+    "        E_min_C0_value, E_min_C1_value, E_min_C01_value, coef_min_value = biSection_search_min(higher_bound, threshold, \n",
     "                                                                               ep, ep_C1, dm_tilde, dm_tilde_C1, \n",
     "                                                                               H_local, measurement_dataset, \n",
     "                                                                               N, M, K, P\n",
     "                                                                               )\n",
     "        E_min_C0.append(E_min_C0_value)\n",
+    "        E_min_C1.append(E_min_C1_value)\n",
     "        E_min_C01.append(E_min_C01_value)\n",
     "        coef_min.append(coef_min_value)\n",
+    "        \n",
+    "        # Energy with SDP - minimum\n",
+    "        E_max_C0_value, E_max_C1_value, E_max_C01_value = SDP_solver_max(coef_min_value+threshold, ep, ep_C1, dm_tilde, dm_tilde_C1, H_local, measurement_dataset, N, M, K, P)\n",
+    "        E_max_C0.append(E_max_C0_value)\n",
+    "        E_max_C1.append(E_max_C1_value)\n",
+    "        E_max_C01.append(E_max_C01_value)\n",
     "\n",
     "        # Average energy calculated from measurements\n",
     "        E_min_and_max = gs_energy_estimate(measurement_dataset, 0.99, H_global_list)\n",
@@ -898,7 +951,7 @@
     "\n",
     "        print(\"Case N_meas =\", N_meas, \"finished\")\n",
     "\n",
-    "    return E_min, E_min_C0, E_min_C01, E_max, coef_min\n",
+    "    return E_min, E_min_C0, E_min_C1, E_min_C01, E_max, E_max_C0, E_max_C1, E_max_C01, coef_min\n",
     "def get_SDP_dataset(num_of_shot, N_meas_list, higher_bound, threshold, N, M, K, P):\n",
     "    '''Get the dataset of the solution of the SDP problems\n",
     "    '''\n",
@@ -907,21 +960,29 @@
     "    data['E_min'] = []\n",
     "    data['E_max'] = []\n",
     "    data['E_min_C0'] = []\n",
+    "    data['E_min_C1'] = []\n",
     "    data['E_min_C01'] = []\n",
+    "    data['E_max_C0'] = []\n",
+    "    data['E_max_C1'] = []\n",
+    "    data['E_max_C01'] = []\n",
     "\n",
     "    coef_data = {}\n",
     "    coef_data['coef_min'] = []\n",
     "\n",
     "    for repetition in range(num_of_shot):\n",
-    "        E_min, E_min_C0, E_min_C01, E_max, coef_min = jordi(\n",
+    "        E_min, E_min_C0, E_min_C1, E_min_C01, E_max, E_max_C0, E_max_C1, E_max_C01, coef_min = jordi(\n",
     "            repetition, \n",
     "            N_meas_list, higher_bound, threshold, \n",
     "            N, M, K, P\n",
     "        )\n",
     "        data['E_min'].append(E_min)\n",
     "        data['E_min_C0'].append(E_min_C0)\n",
+    "        data['E_min_C1'].append(E_min_C1)\n",
     "        data['E_min_C01'].append(E_min_C01)\n",
     "        data['E_max'].append(E_max)\n",
+    "        data['E_max_C0'].append(E_max_C0)\n",
+    "        data['E_max_C1'].append(E_max_C1)\n",
+    "        data['E_max_C01'].append(E_max_C01)\n",
     "        coef_data['coef_min'].append(coef_min)\n",
     "    return data, coef_data\n",
     "def process_SDP_dataset(data, num_of_shot, num_data_point):\n",
