--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -1215,7 +1215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3 # Number of qubits of the entire system\n",
+    "N = 7 # Number of qubits of the entire system\n",
     "M = 2 # Number of qubits of subsystems\n",
     "G = 3 # Number of qubits of partial global system (C1)\n",
     "K = N-M+1 # Number of subsystems\n",
@@ -1236,10 +1236,11 @@
     "\n",
     "num_data_point = 15 # number of N_meas that we select to run\n",
     "N_meas_list = N_meas_list_func(100, 100000, num_data_point) # A list of number of measurement performed in all basis\n",
-    "num_of_shot = 100 # Number of repeatation of the experiment\n",
+    "N_meas_list = N_meas_list[0:6]\n",
+    "num_of_shot = 10 # Number of repeatation of the experiment\n",
     "\n",
     "higher_bound = 0.1 # Starting trial value for the bi-search method\n",
-    "threshold = 0.01 # Accuracy of the minimum relaxation value \n",
+    "threshold = 0.001 # Accuracy of the minimum relaxation value \n",
     "data_min = get_SDP_dataset_min(num_of_shot=num_of_shot,\n",
     "                       N_meas_list=N_meas_list,\n",
     "                       higher_bound=higher_bound,\n",
