Change file name

--- a/More-Qubit Pro v3.0/algorithmic_cooling_final.ipynb
+++ b/More-Qubit Pro v3.0/algorithmic_cooling_final.ipynb
@@ -389,19 +389,28 @@
     "\n",
     "def find_layer_operator(dm_dict, h_set, H_global_list, N, M, K,\n",
     "                        num_of_sweep):\n",
-    "    '''Find a layer operator of algorithmic cooling'''\n",
+    "    '''Find a layer operator of algorithmic cooling\n",
+    "    Args:\n",
+    "       dm_dict: The dictionary that stores all relevant reduced density matrices required to calculate A=<hHh-H> and B=i<hH-Hh> \n",
+    "       h_set: Set of accessible Pauli operators in the lab\n",
+    "       H_global_list: A list Pauli strings which describes the global Hamiltonian\n",
+    "    '''\n",
     "    \n",
     "    layer_operators_list = [] # A list of operators that forms the layer\n",
-    "\n",
+    "                              # Each element of this list refers to one 'sub-layer' of this layer operator\n",
+    "                              # For example, we have only one 'sub-layer' in this list if num_of_sweep=0, and two if num_of_sweep=1\n",
     "    layer_operators = {} # Initialize the first sweep\n",
     "    while len(h_set) != 0:\n",
+    "        # Get the operator which gives the most decrease\n",
     "        h_best, B, t_opt, decrease = find_h_best(dm_dict, h_set, H_global_list, N, M, K)\n",
     "        layer_operators[ tuple([i for i, char in enumerate(h_best) if char != 'I']) ] = tuple((h_best, B, t_opt, decrease))\n",
     "        \n",
+    "        # Evolve the reduced density matrices with this newly-getted operator\n",
     "        new_operator = {} # Get the unitary operator we get\n",
     "        new_operator[ tuple([i for i, char in enumerate(h_best) if char != 'I']) ] = tuple((h_best, B, t_opt, decrease))\n",
     "        dm_dict = get_current_rdm(new_operator, dm_dict)\n",
-    "\n",
+    "        \n",
+    "        # Updated the accessible set of operators\n",
     "        h_set = find_incompatible_paulis(h_set, h_best)\n",
     "    \n",
     "    layer_operators_list.append(layer_operators)\n",
@@ -442,6 +451,10 @@
     "def get_dm(N, qiskit_state, qubit_index):\n",
     "    '''Given a multi-qubit state and index, \n",
     "       get the density matrix of the reduced state associated with the index\n",
+    "    Args:\n",
+    "       N: number of qubits of the whole system\n",
+    "       qiskit_state: a quantum state with qiskit structure\n",
+    "       qubit_index: indices of qubits of interest\n",
     "    '''\n",
     "\n",
     "    basis_list = generate_sub_PauliStrList(N, qubit_index)\n",
@@ -464,7 +477,11 @@
     "\n",
     "\n",
     "def get_HF_state(H_global_list, H_global_matrix, N, M, K):\n",
-    "    '''Get the product state with the lowest <H>'''\n",
+    "    '''Get the product state with the lowest <H>\n",
+    "    Args:\n",
+    "       H_global_list: A list Pauli strings which describes the global Hamiltonian\n",
+    "       H_global_matrix: matrix representation of the global Hamiltonian in computational basis\n",
+    "    '''\n",
     "\n",
     "    # Initialize state to a random tensor product state\n",
     "    input_state = np.array(DensityMatrix(random_statevector(2))) # Make the first qubit a random pure state\n",
@@ -474,7 +491,6 @@
     "        input_state = np.kron(input_state, np.array(dm))\n",
     "    input_state = DensityMatrix(input_state) # This is an N-qubit random tensor product state\n",
     "\n",
-    "    \n",
     "    h_set = available_h_set(N, M=1, K=N)\n",
     "    set_of_indices = get_all_relevant_indices(h_set, H_global_list)\n",
     "\n",
@@ -628,6 +644,8 @@
     "                        higher_bound, threshold,\n",
     "                        model_type,\n",
     "                        SDP_tag, num_of_sweep):\n",
+    "    '''Do the algorithmic cooling\n",
+    "    '''\n",
     "\n",
     "    # Define lists for saving the results\n",
     "    expH_dm_iter = []\n",
@@ -705,6 +723,8 @@
     "               avg_expH_enhanced_SDPvalue, std_expH_enhanced_SDPvalue, \n",
     "               ground_state_energy,\n",
     "               initial_guess, N, N_opt, N_meas):\n",
+    "    '''Draw and plot the figure\n",
+    "    '''\n",
     "    \n",
     "    plt.figure()\n",
     "    iteration_list = list(range(1,N_opt+1))\n",
