--- a/More-Qubit Pro v3.0/main.ipynb
+++ b/More-Qubit Pro v3.0/main.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wangzherui/anaconda3/envs/QuantumC/lib/python3.8/site-packages/qutip/__init__.py:66: UserWarning: The new version of Cython, (>= 3.0.0) is not supported.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import time\n",
